--- a/css/style.css
+++ b/css/style.css
@@ -290,7 +290,7 @@ ul.features li{
         color: var(--peela);
     }
     & h4.plan-features-heading {
-        color: #ffffff;-
+        color: #ffffff;
     }
     & .plan-check {
         background: #ffffff;
